components/ai-project-a/base/cluster-namespace-ai-project-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    opendatahub.io/dashboard: "true"
  name: ai-project-a
