components/ai-project-a/base/rhoai-model-registries-networkpolicy-allow-ai-projects.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ai-projects
  namespace: rhoai-model-registries
spec:
  podSelector:
    matchLabels:
      app: model-registry-lab
      app.kubernetes.io/name: model-registry-lab
      component: model-registry-lab
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          opendatahub.io/dashboard: "true"
    ports:
    - port: 8443
      protocol: TCP
